--- a/app/public/ngcWysiwygInputMenu/ngcWysiwygInputMenu.html
+++ b/app/public/ngcWysiwygInputMenu/ngcWysiwygInputMenu.html
@@ -1,1 +1,1 @@
-<div><md-button class="menu-item" ng-repeat="botao in vm.botoes" ng-click="botao.callback()"><md-icon>{{::botao.icone}}</md-icon></md-button></div>
+<ngc-wysiwyg-botao classe="menu-item" ng-repeat="botao in vm.botoes" callback="botao.callback" icone="{{::botao.icone}}" titulo="{{::botao.titulo}}"></ngc-wysiwyg-botao>
