--- a/app/public/ngcWysiwygFloatingMenu/ngcWysiwygFloatingMenu.html
+++ b/app/public/ngcWysiwygFloatingMenu/ngcWysiwygFloatingMenu.html
@@ -1,1 +1,1 @@
-<md-content md-whiteframe="3"><md-button class="floating-menu-item" ng-repeat="botao in vm.botoes" ng-click="botao.callback()"><md-icon>{{::botao.icone}}</md-icon></md-button></md-content>
+<md-content md-whiteframe="3"><ngc-wysiwyg-botao ng-repeat="botao in vm.botoes" classe="floating-menu-item" active="botao.active()" callback="botao.callback" icone="{{::botao.icone}}" titulo="{{::botao.titulo}}"></ngc-wysiwyg-botao></md-content>
