Atualizando  undoFactory, adicionando resize de imagens

--- a/app/public/ngcWysiwygImageResizer/ngcWysiwygImageResizer.html
+++ b/app/public/ngcWysiwygImageResizer/ngcWysiwygImageResizer.html
@@ -1,1 +1,1 @@
-<div class="ngc-wysiwyg-handler top-right"></div><div class="ngc-wysiwyg-handler top-left"></div><div class="ngc-wysiwyg-handler bottom-right"></div><div class="ngc-wysiwyg-handler bottom-left"></div>
+<div class="ngc-wysiwyg-handler top-right" ng-mousedown="vm.ativarResize($event)"></div><div class="ngc-wysiwyg-handler top-left" ng-mousedown="vm.ativarResize($event)"></div><div class="ngc-wysiwyg-handler bottom-right" ng-mousedown="vm.ativarResize($event)"></div><div class="ngc-wysiwyg-handler bottom-left" ng-mousedown="vm.ativarResize($event)"></div>
