Reestruturando gravacaoContinua, bold inline sem seleção

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
     <!-- <div ckeditor="options" ng-model="content"></div> -->
     <ngc-wysiwyg ng-model='texto'>
     </ngc-wysiwyg>
-    <md-button ng-click='teste()'>teste</md-button>
+    <md-button ng-mousedown='teste($event)'>teste</md-button>
 
     <pre>{{texto}}</pre>
   </div>
